--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ footer{
     color: white;
     width: 100%;
     height: 4rem;
-    margin-top: 4rem;
+    margin-top: 3rem;
 }
 
 header h6 {
@@ -37,15 +37,6 @@ header h6 {
     margin:auto;
 }
 
-.resume div {
-    display: inline-block;
-}
-
-.resume {
-    width: 100%;
-    margin: auto;
-}
-
 footer h6{
     padding-top: 1rem;
     font-size: 20px;
@@ -53,7 +44,7 @@ footer h6{
 }
 
 .fotoperfil {
-    background-image: url(..assets/img/bg-profile.jpg);
+    background-image: url(../assets/img/bg-profile.jpg);
     width: 80%;
     margin:auto;
     margin-top: 4rem;
@@ -76,4 +67,15 @@ section h6 {
     font-family: 'Amatic SC', cursive;
     font-weight: 700;
     margin-bottom: 2rem;
+}
+
+.finalsection{
+    font-family: 'Amatic SC', cursive;
+    font-size: 3rem;
+    text-align: center;
+    color:#1C9084;
+    background-color: gainsboro;
+    width: 80%;
+    margin:auto;
+    margin-top: 4rem;
 }
